style.css
/* Link to the font file */
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');

* {
  box-sizing: border-box;
}

body {
  margin: 0;
  padding: 0;
  font-family: Arial, sans-serif;
  overflow-x: hidden;
  max-width: 100%;
}

header {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  background-image: url("background.jpg");
  background-size: cover;
  background-position: center;
  height: 100vh;
  color: #FFE8D1;
  overflow: hidden;
}

.header-image {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
}

.header-image img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.header-content {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
  z-index: 1;
}

.header-content h1 {
  font-size: 48px;
  margin-bottom: 10px;
}

.header-content h2 {
  font-size: 24px;
}

#about-me {
  display: flex;
  height: 100vh;
}

.about-me-content {
  flex-basis: 50%;
  background-color: #68C3D4;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 20px;
}

.about-me-content h2 {
  font-size: 36px;
  margin-bottom: 10px;
  color: #FFE8D1
}

.about-me-content p {
  font-family: 'Roboto', sans-serif;
  font-size: 22px;
  margin-bottom: 10px;
  margin-left: 10%;
  margin-right: 10%;
  color: #FFE8D1
}

.about-me-photo {
  flex-basis: 50%;
  background-image: url("imgs/me2.jpg");
  background-size: cover;
  background-position: center;
  height: auto;
  min-height: 450px; /* Set a minimum height for the about me photo */
}

#projects {
  background-color: #568EA3;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.project-content {
  display: flex;
  flex-wrap: wrap;
  align-items: stretch;
  width: 100%;
  background-color: #568EA3;
  color: #34113F;
}

.project-info {
  flex-basis: 50%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 20px;
}

.project-info h2 {
  font-size: 40px;
  margin-bottom: 10px;
  color: #FFE8D1;
}

.project-info p {
  font-size: 24px;
  color: #FFE8D1;
}

.project-info,
.project-vid {
  flex-basis: 50%; /* Set the flex basis to 50% to make both sections take half of the width */
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 20px;
}

.project-vid {
  flex-basis: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 20px;
}

.project-vid video {
  width: 100%;
  height: 100%;
}

#video-placeholder {
  height: 0;
  padding-bottom: 56.25%; /* 16:9 aspect ratio */
  position: relative;
}

#video-placeholder::before {
  content: "";
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: #D4F2D2; /* Placeholder background color */
}

.project-button {
  display: flex;
  justify-content: center;
  margin-top: 20px;
}

.project-button button {
  background-color: #826251;
  color: #fff;
  padding: 10px 20px;
  border: none;
  border-radius: 4px;
  font-size: 16px;
  cursor: pointer;
}

.project-button button:hover {
  background-color: #8a6f60;
}

.social-links {
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #FFE8D1;
}

.social-links a {
  margin-right: 20px;
  display: inline-block;
  position: relative;
}

.social-links a:last-child {
  margin-right: 0; /* Remove the right margin for the last icon */
}

.social-links a img {
  width: 220px; /* Adjust the width as needed */
  height: 200px; 
  border: 2px solid transparent; 
  border-radius: 4px;
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); /* Shadow effect */
  transition: all 0.3s ease; /* Transition effect for border and shadow */
}

.social-links a:hover img {
  border-color: #826251; 
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Shadow effect on hover */
}

#contact {
  height: 40vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: #333;
  color: #fff;
  padding: 20px;
}

footer {
  background-color: #333;
  color: #fff;
  padding: 10px;
  text-align: center;
}

@media screen and (max-width: 768px) {
  header h1 {
    font-size: 36px;
  }

  header h2 {
    font-size: 18px;
  }

  #about-me {
    flex-direction: column;
    height: auto;
  }

  .about-me-photo,
  .about-me-content {
    flex-basis: 100%;
    height: auto;
  }

  .project-content {
    height: auto;
  }

  .project-info,
  .project-vid {
    flex-basis: 100%;
    height: auto;
  }

  .project-button {
    margin-top: 10px;
  }
}

